# KNpreptools

./: LICENSE  README.md  environment-network.yml  environment.yml  pyproject.toml  setup.cfg
data/: BreznoNaToscu.sql
notebooks/: Read-and-clean-therion-sql-enhanced.ipynb  import_csv_graphs.ipynb  import_pickled_graphs.ipynb  import_pickled_graphs_bis.ipynb
notebooks/WorkInProgress/: Add-geometry-examples.ipynb  NB-CompareManualProjected_GouffreDejaVu.ipynb  example_3d_plot_pyvista.py  example_export_pyvista_html.ipynb  lrud_to_splay_synthetic_case.py  simple_example_with_vectors.ipynb
scr/knpreptools/: export_fc.py
src/knpreptools/: __init__.py  import_fc.py
src/knpreptools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/knpreptools/cleaning/: cleaning_fc.py
src/knpreptools/export/: aven.py  export_fc.py  plot_fc.py
src/knpreptools/geometry/: geometry_fc.py
src/knpreptools/import_fc/: import_fc.py
src/kntools/: __init__.py
src/kntools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/kntools/cleaning/: cleaning_fc.py
src/kntools/export/: export_fc.py  plot_fc.py
src/kntools/geometry/: geometry_fc.py
src/kntools/import_fc/: import_fc.py
