# Project metadata
[project]
name = "caveload"
description = "Tools for importing clean graph data"
version = "0.0.0"

# Dependencies and requirements
requires-python = ">=3.8"

# Base dependencies
dependencies = [
            'matplotlib',
            'numpy',
            'pandas',
            'networkx',
            'os']