# Project metadata
[project]
name = "knpreptools"
description = "Tools for importing, cleaning, and exporting cave network graphs, mostly in the purpose of statistical analysis with the Karstnet package"
version = "0.0.0"
readme = "README.md"
license = { file = "LICENSE" }

[options]
# Dependencies and requirements
requires-python = ">=3.8"

# Base dependencies
dependencies = [
            'matplotlib',
            'numpy',
            'pandas',
            'networkx',
            'geopandas',
            'shapely']